Run Cleanup on checkstyle